--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="https://www.linkedin.com/in/mostafa-mosaad-b75b9a1b0/">Mostafa Mosaad</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://www.facebook.com/mostafa.u.mosaad" class="link"><i class="ti-facebook"></i></a>
-                <a href="https://twitter.com/MostafaMosaad_" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="https://www.youtube.com/channel/UC-jTAkAR9_977iqFb6PW0RA" class="link"><i class="ti-google"></i></a>
+                <a href="https://www.linkedin.com/in/mostafa-mosaad-b75b9a1b0/" class="link"><i class="ti-linkedin"></i></a>
+                <a href="https://github.com/MostafaMosaad" class="link"><i class="ti-github"></i></a>
                 <a href="https://www.instagram.com/mostafamosaad_/" class="link"><i class="ti-instagram"></i></a>
                 
             </div>
