--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
+                    <div class="portfolio-card">
                         <img src="assets/imgs/1.png" class="portfolio-card-img" >    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>This website!</h5>
-                                <p class="font-weight-normal">Category: Editing Exisisting Web Templates</p>
+                                
                             </span>                         
                         </span>                     
-                    </a>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
+                    <div class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/folio-2.jpg" class="img-responsive rounded" >
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -147,10 +147,10 @@
                                 <p class="font-weight-normal"></p>
                             </span>                         
                         </span>                         
-                    </a>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
+                    <div class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/folio-3.jpg" class="img-responsive rounded" >    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -158,7 +158,7 @@
                                 <p class="font-weight-normal"></p>
                             </span>                         
                         </span>                     
-                    </a>
+                    </div>
                 </div>
             </div><!-- end of row -->
         </div><!-- end of container -->
