--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/folio-2.jpg" class="img-responsive rounded" >
+                        <img class="portfolio-card-img" src="assets/imgs/c.png" class="img-responsive rounded" >
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Soon!</h5>
