--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/c.png" class="img-responsive rounded" >
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Soon!</h5>
+                                <h4>Landing Page</h5>
                                 <p class="font-weight-normal"></p>
                             </span>                         
                         </span>                         
