--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                         </span>                         
                     </div>
                 </div>
+                </div>
                 <div class="col-md-4">
                     <div class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/folio-3.jpg" class="img-responsive rounded" >    
