--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
                         </span>                     
                     </div>
                 </div>
+		    <div class="col-md-4">
+                    <div class="portfolio-card">
+			   <a href="https://mostafamosaad.github.io/zeinakhaled.com/" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/Screenshot 2022-12-17 at 9.23.59 AM.png" class="img-responsive rounded" >    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Galleryia!</h5>
+                                <p class="font-weight-normal"></p>
+                            </span>                         
+                        </span>                     
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="portfolio-card">
 			<a href="https://mostafamosaad.github.io/sample1/" class="portfolio-card">
@@ -150,17 +162,7 @@
 			</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/folio-3.jpg" class="img-responsive rounded" >    
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4>Soon!</h5>
-                                <p class="font-weight-normal"></p>
-                            </span>                         
-                        </span>                     
-                    </div>
-                </div>
+                
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
